-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Beta2
-
4c716dd19c (qt/qtdeclarative/dev) 4c716dd19c (qt/tqtc-qtdeclarative/dev) 9b890ab5d0 (qt/qtdeclarative/6.3) e1615344e4 (qt/tqtc-qmlcompilerplus/6.2)
Using constructs like
QtObject {
id: test
property int x: Infinity
}
render into
/home/cajus/tmp/build-infinity-Desktop_Qt_6_3_0_GCC_64bit-Debug/.rcc/qmlcache/appinfinity_main_qml.cpp: In lambda function: /home/cajus/tmp/build-infinity-Desktop_Qt_6_3_0_GCC_64bit-Debug/.rcc/qmlcache/appinfinity_main_qml.cpp:180:6: error: ‘inf’ was not declared in this scope; did you mean ‘ynf’? 180 | r2 = inf; | ^~~ | ynf
.
Trying
QtObject { id: test property int x: Number.POSITIVE_INFINITY }
runs into
Warning: main.qml:11:32: Could not compile binding for x: Cannot generate efficient code for lookup in QJSValue property int x: Number.POSITIVE_INFINITY ^^^^^^^^^^^^^^^^^
, but seems to work.
For Gerrit Dashboard: QTBUG-100947 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
396436,6 | QmlCompiler: Correctly encode inf/nan/-0 into C++ | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
396839,2 | QmlCompiler: Correctly encode inf/nan/-0 into C++ | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
396840,1 | QmlCompiler: Correctly encode inf/nan/-0 into C++ | 6.2 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
396956,4 | Correctly encode inf/nan/-0 into C++ | 6.2 | qt/tqtc-qmlcompilerplus | Status: MERGED | +2 | 0 |