tests/auto/qml/qmlcppcodegen/data/infinities.qml
@@ -1,0 +1,9 @@
+import QtQml
+
+QtObject {
+    property real positiveInfinity: Infinity
+    property real negativeInfinity: -Infinity
+    property real positiveZero: 0.0
+    property real negativeZero: -0.0
+    property real naN: NaN
+}
